CFITSIO types used instead of fixed width
Until now, the types of the arrays for CFITSIO functions were based on
the fixed width integer types. But CFITSIO operates based on "short",
"int" and "long" types!!!! The problem was actually seen when I was
trying to read a BITPIX=32 image. I had allocated 32bits for every
pixel, but CFITSIO would read and write 64 bits!

The manual was also updated.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2015-03-02  Mohammad Akhlaghi  <makhlaghi@gmail.com>
+
+	* lib/fitsarrayvv.c: Changed array types from intXX_t to short,
+	long and LONGLONG. Unfortuantely this is how CFITSIO works.
+
 2015-02-22  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
 	* doc/gnuastro.texi: Added index, changed "Science and its
