Started work on Convolve.
Nothing special to add! Just that the basic files are put in place to
build Convolve.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2015-03-02  Mohammad Akhlaghi  <makhlaghi@gmail.com>
 
+	* src/convolve/: Work started on Convolve.
+
 	* lib/fitsarrayvv.c: Changed array types from intXX_t to short,
 	long and LONGLONG. Unfortuantely this is how CFITSIO works.
 
